// Vitest Snapshot v1

exports[`SkeletonText > should render correctly with a couple props 1`] = `
<div>
  <div
    class="flex flex-col space-y-1.5 rapid-stack"
  >
    <div
      class="h-3 w-full rounded-md rapid-skeleton skeleton-pulse-medium"
    />
    <div
      class="h-3 w-full rounded-md rapid-skeleton skeleton-pulse-medium"
    />
    <div
      class="h-3 w-full rounded-md rapid-skeleton skeleton-pulse-medium"
    />
    <div
      class="h-3 w-full rounded-md rapid-skeleton skeleton-pulse-medium"
    />
  </div>
</div>
`;

exports[`SkeletonText > should render correctly with props 1`] = `
<div>
  <div
    class="flex flex-col space-y-6 custom-container-class rapid-stack"
  >
    <div
      class="h-3 w-full rounded-md custom-class rapid-skeleton"
    />
    <div
      class="h-3 w-full rounded-md custom-class rapid-skeleton"
    />
    <div
      class="h-3 w-full rounded-md custom-class rapid-skeleton"
    />
    <div
      class="h-3 w-full rounded-md custom-class rapid-skeleton"
    />
  </div>
</div>
`;

exports[`SkeletonText > should render default correctly 1`] = `
<div>
  <div
    class="flex flex-col space-y-6 rapid-stack"
  >
    <div
      class="h-3 w-full rounded-md rapid-skeleton skeleton-pulse"
    />
    <div
      class="h-3 w-full rounded-md rapid-skeleton skeleton-pulse"
    />
    <div
      class="h-3 w-full rounded-md rapid-skeleton skeleton-pulse"
    />
    <div
      class="h-3 w-full rounded-md rapid-skeleton skeleton-pulse"
    />
  </div>
</div>
`;
